fix(password-reset): correct error message visibility and adjust arrow-back icon positioning

--- a/src/app/login/password-send-email/password-reset/password-reset.component.scss
+++ b/src/app/login/password-send-email/password-reset/password-reset.component.scss
@@ -35,7 +35,7 @@
     .arrow-back {
       position: absolute;
       left: 5%;
-      top: 14%;
+      top: 11%;
       width: 24px;
       height: 24px;
       border-radius: 100%;
@@ -190,8 +190,7 @@ mat-dialog-content {
     padding: 24px !important;
 
     .arrow-back {
-      top: 15% !important;
-      left: 5% !important;
+      top: 10% !important;
     }
   }
 
@@ -229,8 +228,7 @@ mat-dialog-content {
     }
 
     .arrow-back {
-      top: 8% !important;
-      left: 5% !important;
+      top: 6% !important;
     }
 
     .error-message-password {
@@ -279,7 +277,7 @@ mat-dialog-content {
     }
 
     .arrow-back {
-      top: 5% !important;
+      top: 4% !important;
       width: 20px !important;
       height: 20px !important;
     }
